@@ -32,7 +32,9 @@ import java.net.URLClassLoader;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -326,6 +328,21 @@ public class TestTezClientUtils {
         .newRecord(ApplicationSubmissionContext.class);
     TezClientUtils.setApplicationPriority(appContext, amconfig);
     assertNull(appContext.getPriority());
+  }
+
+  @Test(timeout=1000)
+  public void testSetApplicationTags() {
+    TezConfiguration conf = new TezConfiguration(false);
+    conf.set(TezConfiguration.TEZ_APPLICATION_TAGS, "foo,bar");
+    AMConfiguration amconfig = new AMConfiguration(conf, null, null);
+    ApplicationSubmissionContext appContext = Records
+        .newRecord(ApplicationSubmissionContext.class);
+    Collection<String> tagsFromConf =
+        amconfig.getTezConfiguration().getTrimmedStringCollection(
+        TezConfiguration.TEZ_APPLICATION_TAGS);
+    appContext.setApplicationTags(new HashSet<String>(tagsFromConf));
+    assertTrue(appContext.getApplicationTags().contains("foo"));
+    assertTrue(appContext.getApplicationTags().contains("bar"));
   }
 
   @Test(timeout = 5000)
